# airbnb-django-backend

./: pyproject.toml  requirements.txt
.github/workflows/: django.yml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py  0003_booking_guests.py
categories/: admin.py  models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py  permissions.py
config/: schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  serializers.py
experiences/migrations/: 0001_initial.py  0002_experience_category_experience_perk.py  0003_alter_experience_category_alter_experience_host.py  0004_alter_experience_perk.py
medias/: admin.py  models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room.py
reviews/: admin.py  models.py  types.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  queries.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_room_name.py  0004_alter_amenity_options_alter_amenity_description.py  0005_room_category.py  0006_alter_room_category_alter_room_owner.py
rooms/templates/: all_rooms.html
users/: admin.py  models.py  types.py  views.py
wishlists/: admin.py  models.py
(+3 files in other folders)
