[tool.poetry]
name = "airbnb-django-backend"
version = "0.1.0"
description = ""
authors = ["sejin kim <s.kim.aazz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"
environ = "^1.0"
sentry-sdk = "^2.15.0"
dj-database-url = "^2.2.0"
django-environ = "^0.11.2"
strawberry-graphql = {extras = ["debug-server"], version = "^0.243.1"}
django-cors-headers = "^4.4.0"
strawberry-graphql-django = "^0.48.0"
pyjwt = "^2.9.0"
requests = "^2.32.3"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
